# AI-Electronics-Purchase-Advisor

./: LICENSE  README.md  analysis.md  app.py  final_recommendation.md  market_research.md  review_analysis.md
datasets/: phone.csv
electronics/: README.md  pyproject.toml
electronics/src/electronics/: crew.py  main.py
electronics/src/electronics/config/: agents.yaml  tasks.yaml
models/: comparison.py  recommender.py
pages/: 1_cameras.py  2_laptops.py  3_phones.py
rag/: retriever.py  vectorstore.py
