[project]
name = "electronics"
version = "0.1.0"
description = "electronics using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
electronics = "electronics.main:run"
run_crew = "electronics.main:run"
train = "electronics.main:train"
replay = "electronics.main:replay"
test = "electronics.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
